cif/org.eclipse.escet.cif.tests/tests/datasynth/req_loc_no_name.cif.err
ERROR: Data-based supervisory controller synthesis failed due to unsatisfied preconditions:

  ------------------------------------------------------------------------------------------------
  (1/1) Value is too complex to be statically evaluated, or evaluation results in a runtime error.
  ------------------------------------------------------------------------------------------------
   * In automaton "r":
     - edge e when p.v = (x + 1) mod 8 * 2 do x := (x + 1) mod 8 * 2;
                          ^                         ^
